2000-06-17  Damon Chaplin  <damon@helixcode.com>

	* widgets/meeting-time-sel/*: updated to use EText items rather than
	GtkEntry widgets and added support for adding new rows.

2000-06-15  Dan Winship  <danw@helixcode.com>

	* README: bye bye goad

2000-06-14  Damon Chaplin  <damon@helixcode.com>

	* README (http): added command to co ORBit.

2000-06-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* configure.in: Added IMAP into the build

2000-06-13  Ettore Perazzoli  <ettore@helixcode.com>

	* notes/Makefile.am (SHELL_OBJS): Removed.
	(evolution_notes_LDADD): Link with
	`$(top_builddir)/shell/libeshell.a'.

2000-06-12  Ettore Perazzoli  <ettore@helixcode.com>

	* widgets/Makefile.am (SUBDIRS): build `misc' before everything
	else.

	* Makefile.am: Install `evolution.png' and `evolution.desktop'
	where appropriate.

	* evolution.png: New.  For now, it's just a copy of
	`art/evolution-inbox.png'.

	* evolution.desktop: New.

2000-06-10  Zbigniew Chyla  <chyla@buy.pl>

	* configure.in: Added pl (Polish) to ALL_LINGUAS

2000-06-09  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Added new directory `shell/glade'.

2000-06-07  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-paned/e-hpaned.c, widgets/e-paned/e-paned.c,
	widgets/e-paned/e-paned.h, widgets/e-paned/e-vpaned.c: Added a
	"quantum" argument for making the panes move in jumps.

2000-06-07  Anders Carlsson  <andersca@gnu.org>

	* configure.in:  Create notes/Makefile

	* notes/*: Add preliminary yellow sticky notes.

2000-06-05	Mathieu Lacage	<mathieu@gnome.org>

	* addressbook/contact-editor/Makefile.am: make it 
	compile: add proper bonobo linking params.
	* addressbook/gui/minicard/Makefile.am: idem.
	* wombat/Makefile.am: add BONOBO_VFS_GNOME_CFLAGS.
	cleanup some useless includes and libs.

2000-06-02  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in (ALL_LINGUAS): Add `it' and `de'.

2000-06-02  Christopher James Lahey  <clahey@helixcode.com>
