@@ -1,3 +1,8 @@
+2000-06-17  Christopher James Lahey  <clahey@helixcode.com>
+
+	* widgets/e-text/e-text.c: Made EText use the font from the
+	canvas's style if one isn't set.
+
 2000-06-17  Damon Chaplin  <damon@helixcode.com>
 
 	* widgets/meeting-time-sel/*: updated to use EText items rather than
